cmps104a/Assignments/asg3/code/yyparse.output
Terminals unused in grammar

   ROOT
   RESERVED


State 0 conflicts: 26 shift/reduce
State 2 conflicts: 1 shift/reduce
State 13 conflicts: 18 shift/reduce
State 43 conflicts: 1 shift/reduce
State 49 conflicts: 2 shift/reduce
State 51 conflicts: 11 shift/reduce
State 52 conflicts: 11 shift/reduce
State 58 conflicts: 1 shift/reduce
State 59 conflicts: 2 shift/reduce
State 60 conflicts: 2 shift/reduce
State 97 conflicts: 2 shift/reduce
State 98 conflicts: 2 shift/reduce
State 99 conflicts: 2 shift/reduce
State 100 conflicts: 2 shift/reduce
State 101 conflicts: 2 shift/reduce
State 102 conflicts: 2 shift/reduce
State 104 conflicts: 2 shift/reduce
State 106 conflicts: 2 shift/reduce
State 125 conflicts: 2 shift/reduce
State 126 conflicts: 2 shift/reduce
State 127 conflicts: 2 shift/reduce
State 128 conflicts: 2 shift/reduce
State 139 conflicts: 1 shift/reduce


Grammar

    0 $accept: start $end

    1 start: program

    2 program: structd
    3        | statmnt
    4        | function
    5        | DIRECTIVE
    6        | program statmnt
    7        | program function
    8        | program structd
    9        | program DIRECTIVE
   10        | %empty

   11 structd: TOK_KW_STRUCT TOK_IDENT '{' '}'
   12        | TOK_KW_STRUCT TOK_IDENT '{' fields '}'

   13 fields: fields basetype '[' ']' TOK_IDENT ';'
   14       | fields basetype TOK_IDENT ';'
   15       | basetype '[' ']' TOK_IDENT ';'
   16       | basetype TOK_IDENT ';'

   17 function: identdec '(' ')' block
   18         | identdec '(' identseq ')' block

   19 identseq: identdec
   20         | identseq ',' identseq

   21 block: '{' stmtseq '}'
   22      | ';'

   23 stmtseq: statmnt
   24        | stmtseq statmnt

   25 statmnt: ifelse
   26        | vardecl
   27        | expr ';'
   28        | error ';'
   29        | block
   30        | return
   31        | while

   32 while: TOK_KW_WHILE '(' expr ')' statmnt

   33 return: TOK_KW_RETURN
   34       | TOK_KW_RETURN expr

   35 vardecl: identdec '=' expr ';'

   36 expr: expr '=' expr
   37     | expr '+' expr
   38     | expr '-' expr
   39     | expr '*' expr
   40     | expr '/' expr
   41     | expr '^' expr
   42     | expr '<' expr
   43     | expr '>' expr
   44     | expr '=' '=' expr
   45     | expr '!' '=' expr
   46     | expr '<' '=' expr
   47     | expr '>' '=' expr
   48     | '+' expr
   49     | '-' expr
   50     | TOK_KW_CHR expr
   51     | TOK_KW_ORD expr
   52     | '(' expr ')'
   53     | call
   54     | identdec
   55     | variable
   56     | constant
   57     | allocatr

   58 constant: NUMBER
   59         | STRING_LIT
   60         | CHAR_LIT
   61         | TOK_KW_TRUE
   62         | TOK_KW_FALSE
   63         | TOK_KW_NULL

   64 variable: TOK_IDENT
   65         | expr '[' expr ']'
   66         | expr '.' TOK_IDENT

   67 allocatr: TOK_KW_NEW TOK_IDENT '(' ')'
   68         | TOK_KW_NEW TOK_KW_STRING '(' expr ')'
   69         | TOK_KW_NEW basetype '[' expr ']'

   70 ifelse: TOK_KW_IF '(' expr ')' statmnt
   71       | TOK_KW_IF '(' expr ')' statmnt TOK_KW_ELSE statmnt

   72 exprseq: expr ',' exprseq
   73        | expr

   74 call: TOK_IDENT '(' ')'
   75     | TOK_IDENT '(' exprseq ')'

   76 basetype: TOK_KW_VOID
   77         | TOK_KW_BOOL
   78         | TOK_KW_CHAR
   79         | TOK_KW_INT
   80         | TOK_KW_STRING

   81 identdec: basetype '[' ']' TOK_IDENT
   82         | basetype TOK_IDENT


Terminals, with rules where they appear

$end (0) 0
'!' (33) 45
'(' (40) 17 18 32 52 67 68 70 71 74 75
')' (41) 17 18 32 52 67 68 70 71 74 75
'*' (42) 39
'+' (43) 37 48
',' (44) 20 72
'-' (45) 38 49
'.' (46) 66
'/' (47) 40
';' (59) 13 14 15 16 22 27 28 35
'<' (60) 42 46
'=' (61) 35 36 44 45 46 47
'>' (62) 43 47
'[' (91) 13 15 65 69 81
']' (93) 13 15 65 69 81
'^' (94) 41
'{' (123) 11 12 21
'}' (125) 11 12 21
error (256) 28
ROOT (258)
TOK_IDENT (259) 11 12 13 14 15 16 64 66 67 74 75 81 82
NUMBER (260) 58
DIRECTIVE (261) 5 9
RESERVED (262)
TOK_KW_VOID (263) 76
TOK_KW_BOOL (264) 77
TOK_KW_CHAR (265) 78
TOK_KW_INT (266) 79
TOK_KW_STRING (267) 68 80
TOK_KW_STRUCT (268) 11 12
TOK_KW_IF (269) 70 71
TOK_KW_ELSE (270) 71
TOK_KW_WHILE (271) 32
TOK_KW_RETURN (272) 33 34
TOK_KW_FALSE (273) 62
TOK_KW_TRUE (274) 61
TOK_KW_NULL (275) 63
TOK_KW_ORD (276) 51
TOK_KW_CHR (277) 50
TOK_KW_NEW (278) 67 68 69
STRING_LIT (279) 59
CHAR_LIT (280) 60
POS (281)
NEG (282)


Nonterminals, with rules where they appear

$accept (46)
    on left: 0
start (47)
    on left: 1, on right: 0
program (48)
    on left: 2 3 4 5 6 7 8 9 10, on right: 1 6 7 8 9
structd (49)
    on left: 11 12, on right: 2 8
fields (50)
    on left: 13 14 15 16, on right: 12 13 14
function (51)
    on left: 17 18, on right: 4 7
identseq (52)
    on left: 19 20, on right: 18 20
block (53)
    on left: 21 22, on right: 17 18 29
stmtseq (54)
    on left: 23 24, on right: 21 24
statmnt (55)
    on left: 25 26 27 28 29 30 31, on right: 3 6 23 24 32 70 71
while (56)
    on left: 32, on right: 31
return (57)
    on left: 33 34, on right: 30
vardecl (58)
    on left: 35, on right: 26
expr (59)
    on left: 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53
    54 55 56 57, on right: 27 32 34 35 36 37 38 39 40 41 42 43 44 45
    46 47 48 49 50 51 52 65 66 68 69 70 71 72 73
constant (60)
    on left: 58 59 60 61 62 63, on right: 56
variable (61)
    on left: 64 65 66, on right: 55
allocatr (62)
    on left: 67 68 69, on right: 57
ifelse (63)
    on left: 70 71, on right: 25
exprseq (64)
    on left: 72 73, on right: 72 75
call (65)
    on left: 74 75, on right: 53
basetype (66)
    on left: 76 77 78 79 80, on right: 13 14 15 16 69 81 82
identdec (67)
    on left: 81 82, on right: 17 18 19 35 54


State 0

    0 $accept: . start $end

    error          shift, and go to state 1
    TOK_IDENT      shift, and go to state 2
    NUMBER         shift, and go to state 3
    DIRECTIVE      shift, and go to state 4
    TOK_KW_VOID    shift, and go to state 5
    TOK_KW_BOOL    shift, and go to state 6
    TOK_KW_CHAR    shift, and go to state 7
    TOK_KW_INT     shift, and go to state 8
    TOK_KW_STRING  shift, and go to state 9
    TOK_KW_STRUCT  shift, and go to state 10
    TOK_KW_IF      shift, and go to state 11
    TOK_KW_WHILE   shift, and go to state 12
    TOK_KW_RETURN  shift, and go to state 13
    TOK_KW_FALSE   shift, and go to state 14
    TOK_KW_TRUE    shift, and go to state 15
    TOK_KW_NULL    shift, and go to state 16
    TOK_KW_ORD     shift, and go to state 17
    TOK_KW_CHR     shift, and go to state 18
    TOK_KW_NEW     shift, and go to state 19
    STRING_LIT     shift, and go to state 20
    CHAR_LIT       shift, and go to state 21
    '{'            shift, and go to state 22
    '+'            shift, and go to state 23
    '-'            shift, and go to state 24
    ';'            shift, and go to state 25
    '('            shift, and go to state 26

    $end           reduce using rule 10 (program)
    error          [reduce using rule 10 (program)]
    TOK_IDENT      [reduce using rule 10 (program)]
    NUMBER         [reduce using rule 10 (program)]
    DIRECTIVE      [reduce using rule 10 (program)]
    TOK_KW_VOID    [reduce using rule 10 (program)]
    TOK_KW_BOOL    [reduce using rule 10 (program)]
    TOK_KW_CHAR    [reduce using rule 10 (program)]
    TOK_KW_INT     [reduce using rule 10 (program)]
    TOK_KW_STRING  [reduce using rule 10 (program)]
    TOK_KW_STRUCT  [reduce using rule 10 (program)]
    TOK_KW_IF      [reduce using rule 10 (program)]
    TOK_KW_WHILE   [reduce using rule 10 (program)]
    TOK_KW_RETURN  [reduce using rule 10 (program)]
    TOK_KW_FALSE   [reduce using rule 10 (program)]
    TOK_KW_TRUE    [reduce using rule 10 (program)]
    TOK_KW_NULL    [reduce using rule 10 (program)]
    TOK_KW_ORD     [reduce using rule 10 (program)]
    TOK_KW_CHR     [reduce using rule 10 (program)]
    TOK_KW_NEW     [reduce using rule 10 (program)]
    STRING_LIT     [reduce using rule 10 (program)]
    CHAR_LIT       [reduce using rule 10 (program)]
    '{'            [reduce using rule 10 (program)]
    '+'            [reduce using rule 10 (program)]
    '-'            [reduce using rule 10 (program)]
    ';'            [reduce using rule 10 (program)]
    '('            [reduce using rule 10 (program)]

    start     go to state 27
    program   go to state 28
    structd   go to state 29
    function  go to state 30
    block     go to state 31
    statmnt   go to state 32
    while     go to state 33
    return    go to state 34
    vardecl   go to state 35
    expr      go to state 36
    constant  go to state 37
    variable  go to state 38
    allocatr  go to state 39
    ifelse    go to state 40
    call      go to state 41
    basetype  go to state 42
    identdec  go to state 43


State 1

   28 statmnt: error . ';'

    ';'  shift, and go to state 44


State 2

   64 variable: TOK_IDENT .
   74 call: TOK_IDENT . '(' ')'
   75     | TOK_IDENT . '(' exprseq ')'

    '('  shift, and go to state 45

    '('       [reduce using rule 64 (variable)]
    $default  reduce using rule 64 (variable)


State 3

   58 constant: NUMBER .

    $default  reduce using rule 58 (constant)


State 4

    5 program: DIRECTIVE .

    $default  reduce using rule 5 (program)


State 5

   76 basetype: TOK_KW_VOID .

    $default  reduce using rule 76 (basetype)


State 6

   77 basetype: TOK_KW_BOOL .

    $default  reduce using rule 77 (basetype)


State 7

   78 basetype: TOK_KW_CHAR .

    $default  reduce using rule 78 (basetype)


State 8

   79 basetype: TOK_KW_INT .

    $default  reduce using rule 79 (basetype)


State 9

   80 basetype: TOK_KW_STRING .

    $default  reduce using rule 80 (basetype)


State 10

   11 structd: TOK_KW_STRUCT . TOK_IDENT '{' '}'
   12        | TOK_KW_STRUCT . TOK_IDENT '{' fields '}'

    TOK_IDENT  shift, and go to state 46


State 11

   70 ifelse: TOK_KW_IF . '(' expr ')' statmnt
   71       | TOK_KW_IF . '(' expr ')' statmnt TOK_KW_ELSE statmnt

    '('  shift, and go to state 47


State 12

   32 while: TOK_KW_WHILE . '(' expr ')' statmnt

    '('  shift, and go to state 48


State 13

   33 return: TOK_KW_RETURN .
   34       | TOK_KW_RETURN . expr

    TOK_IDENT      shift, and go to state 2
    NUMBER         shift, and go to state 3
    TOK_KW_VOID    shift, and go to state 5
    TOK_KW_BOOL    shift, and go to state 6
    TOK_KW_CHAR    shift, and go to state 7
    TOK_KW_INT     shift, and go to state 8
    TOK_KW_STRING  shift, and go to state 9
    TOK_KW_FALSE   shift, and go to state 14
    TOK_KW_TRUE    shift, and go to state 15
    TOK_KW_NULL    shift, and go to state 16
    TOK_KW_ORD     shift, and go to state 17
    TOK_KW_CHR     shift, and go to state 18
    TOK_KW_NEW     shift, and go to state 19
    STRING_LIT     shift, and go to state 20
    CHAR_LIT       shift, and go to state 21
    '+'            shift, and go to state 23
    '-'            shift, and go to state 24
    '('            shift, and go to state 26

    TOK_IDENT      [reduce using rule 33 (return)]
    NUMBER         [reduce using rule 33 (return)]
    TOK_KW_VOID    [reduce using rule 33 (return)]
    TOK_KW_BOOL    [reduce using rule 33 (return)]
    TOK_KW_CHAR    [reduce using rule 33 (return)]
    TOK_KW_INT     [reduce using rule 33 (return)]
    TOK_KW_STRING  [reduce using rule 33 (return)]
    TOK_KW_FALSE   [reduce using rule 33 (return)]
    TOK_KW_TRUE    [reduce using rule 33 (return)]
    TOK_KW_NULL    [reduce using rule 33 (return)]
    TOK_KW_ORD     [reduce using rule 33 (return)]
    TOK_KW_CHR     [reduce using rule 33 (return)]
    TOK_KW_NEW     [reduce using rule 33 (return)]
    STRING_LIT     [reduce using rule 33 (return)]
    CHAR_LIT       [reduce using rule 33 (return)]
    '+'            [reduce using rule 33 (return)]
    '-'            [reduce using rule 33 (return)]
    '('            [reduce using rule 33 (return)]
    $default       reduce using rule 33 (return)

    expr      go to state 49
    constant  go to state 37
    variable  go to state 38
    allocatr  go to state 39
    call      go to state 41
    basetype  go to state 42
    identdec  go to state 50


State 14

   62 constant: TOK_KW_FALSE .

    $default  reduce using rule 62 (constant)


State 15

   61 constant: TOK_KW_TRUE .

    $default  reduce using rule 61 (constant)


State 16

   63 constant: TOK_KW_NULL .

    $default  reduce using rule 63 (constant)


State 17

   51 expr: TOK_KW_ORD . expr

    TOK_IDENT      shift, and go to state 2
    NUMBER         shift, and go to state 3
    TOK_KW_VOID    shift, and go to state 5
    TOK_KW_BOOL    shift, and go to state 6
    TOK_KW_CHAR    shift, and go to state 7
    TOK_KW_INT     shift, and go to state 8
    TOK_KW_STRING  shift, and go to state 9
    TOK_KW_FALSE   shift, and go to state 14
    TOK_KW_TRUE    shift, and go to state 15
    TOK_KW_NULL    shift, and go to state 16
    TOK_KW_ORD     shift, and go to state 17
    TOK_KW_CHR     shift, and go to state 18
    TOK_KW_NEW     shift, and go to state 19
    STRING_LIT     shift, and go to state 20
    CHAR_LIT       shift, and go to state 21
    '+'            shift, and go to state 23
    '-'            shift, and go to state 24
    '('            shift, and go to state 26

    expr      go to state 51
    constant  go to state 37
    variable  go to state 38
    allocatr  go to state 39
    call      go to state 41
    basetype  go to state 42
    identdec  go to state 50


State 18

   50 expr: TOK_KW_CHR . expr

    TOK_IDENT      shift, and go to state 2
    NUMBER         shift, and go to state 3
    TOK_KW_VOID    shift, and go to state 5
    TOK_KW_BOOL    shift, and go to state 6
    TOK_KW_CHAR    shift, and go to state 7
    TOK_KW_INT     shift, and go to state 8
    TOK_KW_STRING  shift, and go to state 9
    TOK_KW_FALSE   shift, and go to state 14
    TOK_KW_TRUE    shift, and go to state 15
    TOK_KW_NULL    shift, and go to state 16
    TOK_KW_ORD     shift, and go to state 17
    TOK_KW_CHR     shift, and go to state 18
    TOK_KW_NEW     shift, and go to state 19
    STRING_LIT     shift, and go to state 20
    CHAR_LIT       shift, and go to state 21
    '+'            shift, and go to state 23
    '-'            shift, and go to state 24
    '('            shift, and go to state 26

    expr      go to state 52
    constant  go to state 37
    variable  go to state 38
    allocatr  go to state 39
    call      go to state 41
    basetype  go to state 42
    identdec  go to state 50


State 19

   67 allocatr: TOK_KW_NEW . TOK_IDENT '(' ')'
   68         | TOK_KW_NEW . TOK_KW_STRING '(' expr ')'
   69         | TOK_KW_NEW . basetype '[' expr ']'

    TOK_IDENT      shift, and go to state 53
    TOK_KW_VOID    shift, and go to state 5
    TOK_KW_BOOL    shift, and go to state 6
    TOK_KW_CHAR    shift, and go to state 7
    TOK_KW_INT     shift, and go to state 8
    TOK_KW_STRING  shift, and go to state 54

    basetype  go to state 55


State 20

   59 constant: STRING_LIT .

    $default  reduce using rule 59 (constant)


State 21

   60 constant: CHAR_LIT .

    $default  reduce using rule 60 (constant)


State 22

   21 block: '{' . stmtseq '}'

    error          shift, and go to state 1
    TOK_IDENT      shift, and go to state 2
    NUMBER         shift, and go to state 3
    TOK_KW_VOID    shift, and go to state 5
    TOK_KW_BOOL    shift, and go to state 6
    TOK_KW_CHAR    shift, and go to state 7
    TOK_KW_INT     shift, and go to state 8
    TOK_KW_STRING  shift, and go to state 9
    TOK_KW_IF      shift, and go to state 11
    TOK_KW_WHILE   shift, and go to state 12
    TOK_KW_RETURN  shift, and go to state 13
    TOK_KW_FALSE   shift, and go to state 14
    TOK_KW_TRUE    shift, and go to state 15
    TOK_KW_NULL    shift, and go to state 16
    TOK_KW_ORD     shift, and go to state 17
    TOK_KW_CHR     shift, and go to state 18
    TOK_KW_NEW     shift, and go to state 19
    STRING_LIT     shift, and go to state 20
    CHAR_LIT       shift, and go to state 21
    '{'            shift, and go to state 22
    '+'            shift, and go to state 23
    '-'            shift, and go to state 24
    ';'            shift, and go to state 25
    '('            shift, and go to state 26

    block     go to state 31
    stmtseq   go to state 56
    statmnt   go to state 57
    while     go to state 33
    return    go to state 34
    vardecl   go to state 35
    expr      go to state 36
    constant  go to state 37
    variable  go to state 38
    allocatr  go to state 39
    ifelse    go to state 40
    call      go to state 41
    basetype  go to state 42
    identdec  go to state 58


State 23

   48 expr: '+' . expr

    TOK_IDENT      shift, and go to state 2
    NUMBER         shift, and go to state 3
    TOK_KW_VOID    shift, and go to state 5
    TOK_KW_BOOL    shift, and go to state 6
    TOK_KW_CHAR    shift, and go to state 7
    TOK_KW_INT     shift, and go to state 8
    TOK_KW_STRING  shift, and go to state 9
    TOK_KW_FALSE   shift, and go to state 14
    TOK_KW_TRUE    shift, and go to state 15
    TOK_KW_NULL    shift, and go to state 16
    TOK_KW_ORD     shift, and go to state 17
    TOK_KW_CHR     shift, and go to state 18
    TOK_KW_NEW     shift, and go to state 19
    STRING_LIT     shift, and go to state 20
    CHAR_LIT       shift, and go to state 21
    '+'            shift, and go to state 23
    '-'            shift, and go to state 24
    '('            shift, and go to state 26

    expr      go to state 59
    constant  go to state 37
    variable  go to state 38
    allocatr  go to state 39
    call      go to state 41
    basetype  go to state 42
    identdec  go to state 50


State 24

   49 expr: '-' . expr

    TOK_IDENT      shift, and go to state 2
    NUMBER         shift, and go to state 3
    TOK_KW_VOID    shift, and go to state 5
    TOK_KW_BOOL    shift, and go to state 6
    TOK_KW_CHAR    shift, and go to state 7
    TOK_KW_INT     shift, and go to state 8
    TOK_KW_STRING  shift, and go to state 9
    TOK_KW_FALSE   shift, and go to state 14
    TOK_KW_TRUE    shift, and go to state 15
    TOK_KW_NULL    shift, and go to state 16
    TOK_KW_ORD     shift, and go to state 17
    TOK_KW_CHR     shift, and go to state 18
    TOK_KW_NEW     shift, and go to state 19
    STRING_LIT     shift, and go to state 20
    CHAR_LIT       shift, and go to state 21
    '+'            shift, and go to state 23
    '-'            shift, and go to state 24
    '('            shift, and go to state 26

    expr      go to state 60
    constant  go to state 37
    variable  go to state 38
    allocatr  go to state 39
    call      go to state 41
    basetype  go to state 42
    identdec  go to state 50


State 25

   22 block: ';' .

    $default  reduce using rule 22 (block)


State 26

   52 expr: '(' . expr ')'

    TOK_IDENT      shift, and go to state 2
    NUMBER         shift, and go to state 3
    TOK_KW_VOID    shift, and go to state 5
    TOK_KW_BOOL    shift, and go to state 6
    TOK_KW_CHAR    shift, and go to state 7
    TOK_KW_INT     shift, and go to state 8
    TOK_KW_STRING  shift, and go to state 9
    TOK_KW_FALSE   shift, and go to state 14
    TOK_KW_TRUE    shift, and go to state 15
    TOK_KW_NULL    shift, and go to state 16
    TOK_KW_ORD     shift, and go to state 17
    TOK_KW_CHR     shift, and go to state 18
    TOK_KW_NEW     shift, and go to state 19
    STRING_LIT     shift, and go to state 20
    CHAR_LIT       shift, and go to state 21
    '+'            shift, and go to state 23
    '-'            shift, and go to state 24
    '('            shift, and go to state 26

    expr      go to state 61
    constant  go to state 37
    variable  go to state 38
    allocatr  go to state 39
    call      go to state 41
    basetype  go to state 42
    identdec  go to state 50


State 27

    0 $accept: start . $end

    $end  shift, and go to state 62


State 28

    1 start: program .
    6 program: program . statmnt
    7        | program . function
    8        | program . structd
    9        | program . DIRECTIVE

    error          shift, and go to state 1
    TOK_IDENT      shift, and go to state 2
    NUMBER         shift, and go to state 3
    DIRECTIVE      shift, and go to state 63
    TOK_KW_VOID    shift, and go to state 5
    TOK_KW_BOOL    shift, and go to state 6
    TOK_KW_CHAR    shift, and go to state 7
    TOK_KW_INT     shift, and go to state 8
    TOK_KW_STRING  shift, and go to state 9
    TOK_KW_STRUCT  shift, and go to state 10
    TOK_KW_IF      shift, and go to state 11
    TOK_KW_WHILE   shift, and go to state 12
    TOK_KW_RETURN  shift, and go to state 13
    TOK_KW_FALSE   shift, and go to state 14
    TOK_KW_TRUE    shift, and go to state 15
    TOK_KW_NULL    shift, and go to state 16
    TOK_KW_ORD     shift, and go to state 17
    TOK_KW_CHR     shift, and go to state 18
    TOK_KW_NEW     shift, and go to state 19
    STRING_LIT     shift, and go to state 20
    CHAR_LIT       shift, and go to state 21
    '{'            shift, and go to state 22
    '+'            shift, and go to state 23
    '-'            shift, and go to state 24
    ';'            shift, and go to state 25
    '('            shift, and go to state 26

    $end  reduce using rule 1 (start)

    structd   go to state 64
    function  go to state 65
    block     go to state 31
    statmnt   go to state 66
    while     go to state 33
    return    go to state 34
    vardecl   go to state 35
    expr      go to state 36
    constant  go to state 37
    variable  go to state 38
    allocatr  go to state 39
    ifelse    go to state 40
    call      go to state 41
    basetype  go to state 42
    identdec  go to state 43


State 29

    2 program: structd .

    $default  reduce using rule 2 (program)


State 30

    4 program: function .

    $default  reduce using rule 4 (program)


State 31

   29 statmnt: block .

    $default  reduce using rule 29 (statmnt)


State 32

    3 program: statmnt .

    $default  reduce using rule 3 (program)


State 33

   31 statmnt: while .

    $default  reduce using rule 31 (statmnt)


State 34

   30 statmnt: return .

    $default  reduce using rule 30 (statmnt)


State 35

   26 statmnt: vardecl .

    $default  reduce using rule 26 (statmnt)


State 36

   27 statmnt: expr . ';'
   36 expr: expr . '=' expr
   37     | expr . '+' expr
   38     | expr . '-' expr
   39     | expr . '*' expr
   40     | expr . '/' expr
   41     | expr . '^' expr
   42     | expr . '<' expr
   43     | expr . '>' expr
   44     | expr . '=' '=' expr
   45     | expr . '!' '=' expr
   46     | expr . '<' '=' expr
   47     | expr . '>' '=' expr
   65 variable: expr . '[' expr ']'
   66         | expr . '.' TOK_IDENT

    '['  shift, and go to state 67
    '='  shift, and go to state 68
    '+'  shift, and go to state 69
    '-'  shift, and go to state 70
    '*'  shift, and go to state 71
    '/'  shift, and go to state 72
    '^'  shift, and go to state 73
    '<'  shift, and go to state 74
    '>'  shift, and go to state 75
    '!'  shift, and go to state 76
    ';'  shift, and go to state 77
    '.'  shift, and go to state 78


State 37

   56 expr: constant .

    $default  reduce using rule 56 (expr)


State 38

   55 expr: variable .

    $default  reduce using rule 55 (expr)


State 39

   57 expr: allocatr .

    $default  reduce using rule 57 (expr)


State 40

   25 statmnt: ifelse .

    $default  reduce using rule 25 (statmnt)


State 41

   53 expr: call .

    $default  reduce using rule 53 (expr)


State 42

   81 identdec: basetype . '[' ']' TOK_IDENT
   82         | basetype . TOK_IDENT

    TOK_IDENT  shift, and go to state 79
    '['        shift, and go to state 80


State 43

   17 function: identdec . '(' ')' block
   18         | identdec . '(' identseq ')' block
   35 vardecl: identdec . '=' expr ';'
   54 expr: identdec .

    '='  shift, and go to state 81
    '('  shift, and go to state 82

    '='       [reduce using rule 54 (expr)]
    $default  reduce using rule 54 (expr)


State 44

   28 statmnt: error ';' .

    $default  reduce using rule 28 (statmnt)


State 45

   74 call: TOK_IDENT '(' . ')'
   75     | TOK_IDENT '(' . exprseq ')'

    TOK_IDENT      shift, and go to state 2
    NUMBER         shift, and go to state 3
    TOK_KW_VOID    shift, and go to state 5
    TOK_KW_BOOL    shift, and go to state 6
    TOK_KW_CHAR    shift, and go to state 7
    TOK_KW_INT     shift, and go to state 8
    TOK_KW_STRING  shift, and go to state 9
    TOK_KW_FALSE   shift, and go to state 14
    TOK_KW_TRUE    shift, and go to state 15
    TOK_KW_NULL    shift, and go to state 16
    TOK_KW_ORD     shift, and go to state 17
    TOK_KW_CHR     shift, and go to state 18
    TOK_KW_NEW     shift, and go to state 19
    STRING_LIT     shift, and go to state 20
    CHAR_LIT       shift, and go to state 21
    '+'            shift, and go to state 23
    '-'            shift, and go to state 24
    '('            shift, and go to state 26
    ')'            shift, and go to state 83

    expr      go to state 84
    constant  go to state 37
    variable  go to state 38
    allocatr  go to state 39
    exprseq   go to state 85
    call      go to state 41
    basetype  go to state 42
    identdec  go to state 50


State 46

   11 structd: TOK_KW_STRUCT TOK_IDENT . '{' '}'
   12        | TOK_KW_STRUCT TOK_IDENT . '{' fields '}'

    '{'  shift, and go to state 86


State 47
